--- a/index.html
+++ b/index.html
@@ -72,28 +72,28 @@
 
             <div class="container-fluid">
                 <div class="row mt-5">
-                    <div class="col-md col-sm-6 p-2">
+                    <div class="col-sm-6 col-lg-3 p-2">
                         <div class="p-2" style="background: #F0F9FF;border-radius: 5px;">
                             <i class="bi bi-mortarboard fs-3" style="color: #74C1ED;"></i>
                             <p class="mb-5">Students</p>
                             <p class="text-end fw-bold fs-5">243</p>
                         </div>
                     </div>
-                    <div class="col-md col-sm-6 p-2">
+                    <div class="col-sm-6 col-lg-3 p-2">
                         <div class="p-2" style="background: #FEF6FB;border-radius: 5px;">
                             <i class="bi bi-bookmark fs-3" style="color: #EE95C5;"></i>
                             <p class="mb-5">Course</p>
                             <p class="text-end fw-bold fs-5">13</p>
                         </div>
                     </div>
-                    <div class="col-md col-sm-6 p-2">
+                    <div class="col-sm-6 col-lg-3 p-2">
                         <div class="p-2" style="background: #FEFBEC;border-radius: 5px;">
                             <i class="bi bi-currency-dollar fs-3" style="color: #74C1ED;"></i>
                             <p class="mb-5">Payments</p>
                             <p class="text-end fw-bold fs-5">DHS 556,000</p>
                         </div>
                     </div>
-                    <div class="col-md col-sm-6 p-2">
+                    <div class="col-sm-6 col-lg-3 p-2">
                         <div class="p-2" style="background: linear-gradient(110.42deg, #00C1FE 18.27%, #FAFFC1 91.84%);border-radius: 6px;">
                             <i class="bi bi-person text-white fs-3"></i>
                             <p class="mb-5 text-white">Users</p>
